Upload de arquivos e Correções